Hotfix: ajustando detalhes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span class="text-color">SEX</span>
                 <span class="text-color">SAB</span>
             </div>
-            <span class="text-color" id="full-date"></span>
+            <span class="text-color full-date" id="full-date"></span>
         </div> 
         <script src="scripts/clock.js"></script>      
     </body>
